--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,7 @@
                 <p>Tu base de datos ha sido limpiada y normalizada con éxito.</p>
                 <p id="processed-count"></p>
                 <a href="#" id="download-link" class="btn">Descargar Base Limpia</a>
+                <button type="button" id="reset-btn" class="btn btn-danger">Empezar de Nuevo</button>
             </div>
         </form>
         </div>
